# orienteering-startlist-screen

./: .gitignore  Orienteering-Startlist-Screen.iss  Orienteering-Startlist-Screen.spec  README.md  app_id.txt  pyproject.toml
.github/workflows/: build-binaries.yml  lint-and-test.yml
devscripts/: builds.py  checks.py  generators.py  run_checks.py
src/orienteering_startlist_screen/: config.py  main.py
src/orienteering_startlist_screen/resources/: resources.qrc  theme_forest.xml
src/orienteering_startlist_screen/ui/: main_window.ui  main_window_ui.py  start_port_select_dialog.ui  start_port_select_dialog_ui.py
src/orienteering_startlist_screen/utils/: generate_demo_files.py  own_dataclasses.py  parser.py  web_server.py
src/orienteering_startlist_screen/utils/static/css/: app.css
src/orienteering_startlist_screen/utils/templates/: index.html
src/orienteering_startlist_screen/views/: main_window.py  start_and_port_select_dialog.py
