[project]
name = "orienteering-startlist-screen"
version = "0.1.0"
description = ""
authors = [
    {name = "Lenz", email = "mail+git@brandl.vip"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
"pyside6 (>=6.9.2,<7.0.0)",
"pyside6-addons (>=6.9.2,<7.0.0)",
"poetry-core (>=2.1.3,<3.0.0)",
"xmlschema (>=4.1.0,<5.0.0)",
"flask (>=3.1.2,<4.0.0)",
"faker (>=37.8.0,<38.0.0)",
"qt-material (>=2.17,<3.0)",
"lxml (>=6.0.2,<7.0.0)",
"pycountry (>=24.6.1,<25.0.0)",
]

[project.scripts]
check = "devscripts.checks:format_tests_and_checks"
check-ci = "devscripts.checks:checks_and_tests"
generate-ui = "devscripts.generators:generate_ui"
generate-rcc = "devscripts.generators:generate_rcc"
build-spec = "devscripts.builds:build_spec"
build-exe = "devscripts.builds:build_exe"
build-installer = "devscripts.builds:build_installer"

[tool.poetry]
packages = [
    {include = "orienteering_startlist_screen", from = "src"},
    {include = "devscripts"}
]

[tool.ruff]
exclude = ["src/orienteering_startlist_screen/ui", "src/orienteering_startlist_screen/resources"]

[tool.mypy]
exclude = ["src/orienteering_startlist_screen/ui", "src/orienteering_startlist_screen/resources"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.11"
mypy = "^1.17.1"
pytest-qt = "^4.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
